tests/error/variadic_start_twice.gw
#! [contains] vararg.start already used. this is an error
fun void test(...) { vararg.start; vararg.start;}
